--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {},
   "devDependencies": {
     "@uniswap/token-lists": "^1.0.0-beta.16",
-    "ajv": "^6.12.4"
+    "ajv": "^6.12.4",
+    "semantic-release": "^17.3.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
