--- a/.github/workflows/generate-lists.yml
+++ b/.github/workflows/generate-lists.yml
@@ -29,8 +29,7 @@ jobs:
       run: |
         git config user.name github-actions
         git config user.email github-actions@github.com
-        git checkout lists
-        rm sushiswap.tokenlist.json
+        git checkout -B lists
         git add *.json -f
         git commit -m "chore(sync): sushiswap: $(date)" -a || true
         git tag `date "+lists-%Y%m%d%H%M%S"`
