git(tag): reduce decimals of precision
switch to `%Y%m%d` as we only run this daily anyways

--- a/.github/workflows/generate-lists.yml
+++ b/.github/workflows/generate-lists.yml
@@ -32,7 +32,7 @@ jobs:
         git checkout -B lists
         git add *.json -f
         git commit -m "chore(sync): sushiswap: $(date)" -a || true
-        git tag `date "+lists-%Y%m%d%H%M%S"`
+        git tag `date "+lists-%Y%m%d"`
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
