--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,6 @@
 {
-	"extends": [
-		"config:base"
-	],
-	"digest": {
-		"automerge": true
-	}
+  "extends": ["config:base"],
+  "digest": {
+    "automerge": true
+  }
 }
