--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@yfi/tokenlist",
-  "version": "1.0.4",
+  "name": "yearn-tokenlist",
+  "version": "1.0.5",
   "description": "Yearn Finance tokenlist with schema validation",
   "license": "Apache-2.0",
   "main": "index.mjs",
