--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": " npx prettier -c .prettierrc.js --write .",
     "start": "node --experimental-modules --experimental-json-modules ./index.mjs"
   },
   "keywords": [
