--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Yearn Finance tokenlist with schema validation",
   "license": "Apache-2.0",
   "main": "index.mjs",
-  "dependencies": {},
   "devDependencies": {
-    "@uniswap/token-lists": "1.0.0-beta.19",
-    "ajv": "6.12.6",
-    "semantic-release": "17.4.1"
+    "@ethersproject/address": "^5.0.11",
+    "@uniswap/token-lists": "^1.0.0-beta.16",
+    "ajv": "^6.12.4",
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2",
+    "semantic-release": "^17.3.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
