--- a/.kodiak.toml
+++ b/.kodiak.toml
@@ -1,6 +1,8 @@
 # .kodiak.toml
 [merge]
 delete_branch_on_merge = true
+automerge_label = ["🍣 - snyc tokenlist"]
+
 
 [merge.automerge_dependencies]
 # auto merge all PRs opened by "dependabot" that are "minor" or "patch" version upgrades. "major" version upgrades will be ignored.
