--- a/api/package.json
+++ b/api/package.json
@@ -2,7 +2,7 @@
   "name": "yearn-tokenlist-api",
   "version": "1.0.2",
   "main": "index.js",
-  "files": [ "scripts/*", "src/*"]
+  "files": [ "scripts/*", "src/*"],
   "scripts": {
     "build-list:all": "yarn build-list:erc20-mainnet && yarn build-list:erc721-mainnet && yarn build-list:erc1155-mainnet && yarn scrape-open-graph",
     "build-list:erc20-mainnet": "ts-node ./scripts/erc20-mainnet.ts && yarn run lint:fix-json",
