--- a/api/package.json
+++ b/api/package.json
@@ -2,7 +2,10 @@
   "name": "yearn-tokenlist-api",
   "version": "1.0.2",
   "main": "index.js",
-  "files": [ "scripts/*", "src/*"],
+  "files": [
+    "scripts/*",
+    "src/*"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/sambacha/yearn-finance-tokenlist.git",
@@ -19,6 +22,7 @@
   "author": "sam bacha <sam@freighttrust.com>",
   "license": "MIT",
   "devDependencies": {
+    "@0xsequence/collectible-lists": "1.1.0",
     "@nomiclabs/hardhat-ethers": "2.0.2",
     "@openzeppelin/contracts": "3.4.1",
     "@types/fs-extra": "9.0.9",
@@ -27,7 +31,6 @@
     "@types/node": "14.14.35",
     "@types/node-fetch": "2.5.8",
     "@uniswap/token-lists": "1.0.0-beta.19",
-    "@0xsequence/collectible-lists": "1.1.0",
     "ajv": "6.12.6",
     "ajv-formats": "1.5.1",
     "cli-progress": "3.9.0",
