--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.5",
   "description": "Yearn Finance tokenlist with schema validation",
   "license": "Apache-2.0",
+  "types": "types/tokenlist.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/sambacha/yearn-finance-tokenlist.git",
