--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yearn-tokenlist",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "Yearn Finance tokenlist with schema validation",
   "license": "Apache-2.0",
   "types": "types/tokenlist.d.ts",
@@ -10,7 +10,13 @@
     "directory": "/"
   },
   "main": "index.js",
-  "files": ["index.js", "index.mjs", "sushiswap.json", "yearn.json", "tokens.json"],
+  "files": [
+    "index.js",
+    "index.mjs",
+    "sushiswap.json",
+    "yearn.json",
+    "tokens.json"
+  ],
   "devDependencies": {
     "@ethersproject/address": "5.0.11",
     "@uniswap/token-lists": "1.0.0-beta.21",
